--- a/index.html
+++ b/index.html
@@ -3,10 +3,87 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title></title>
+    <link href='https://fonts.googleapis.com/css?family=Yellowtail' rel='stylesheet' type='text/css'>
+    <title>Delicious: Chocolate Pizza</title>
   </head>
   <body>
+    <header>
+      <img src="imgs/logo.png"/>
+      <div>
+        <h1><span class="cursive">Delicious</span></h1>
+        <h6>THE BEST FOOD BLOG ON THE WEB.</h6>
+      </div>
+      <div class="social-media">
+        <img src="imgs/fb-icon.png">
+        <img src="imgs/twit-icon.png">
+        <img src="imgs/gp-icon.png">
+        <img src="imgs/insta-icon.png">
+        <img src="imgs/flic-icon.png">
+        <img src="imgs/pint-icon.png">
+        <img src="imgs/rss-icon.png">
+        <img src="imgs/mail-icon.png">
+      </div>
+    </header>
+    <main>
+      <heading>
+        <div>
+          <h1>Chocolate-pizza</h1>
+          <h6>POSTED ON 15 DEC 2013 / DESERTS</h6>
+        </div>
+        <span class="print">
+          <img src="imgs/print-icon.png"/>
+          <h6>Print</h6>
+        </span>
+      </heading>
+      <img class="big-pic" src="imgs/choco-pizza.png"/>
+      <p>For the fig swirl: Melt butter over medium head in a saucepan. Add brown sugar and stir to dissolve. Halve all of the hte figs and toss isn the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</p>
+      <p>Ice cream: in a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.</p>
+      <p>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jame mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
 
+      <form>
+        <div>
+          <input type="checkbox" name="milk"/>
+          <label for="milk">1 1/2 cups milk</label>
+          <input type="checkbox" name="mascarpone"/>
+          <label for="mascarpone">1/2 cup mascarpone</label>
+          <input type="checkbox" name="salt"/>
+          <label for="salt">1/2 tsp pink salt</label>
+          <input type="checkbox" name="figs"/>
+          <label for="figs">1 lb Black Mission Figs</label>
+          <input type="checkbox" name="b-sugar"/>
+          <label for="b-sugar">1/2 cup brown sugar</label>
+          <input type="checkbox" name="water"/>
+          <label for="water">2-4 tbsp water</label>
+        </div>
+        <div>
+          <input type="checkbox" name="cream"/>
+          <label for="cream">1 1/2 cups heavy cream</label>
+          <input type="checkbox" name="g-sugar"/>
+          <label for="g-sugar">1/3 granulated sugar</label>
+          <input type="checkbox" name="eggs"/>
+          <label for="eggs">2 egg yolks</label>
+          <input type="checkbox" name="lemon"/>
+          <label for="lemon">1 lemon, juiced</label>
+          <input type="checkbox" name="butter"/>
+          <label for="butter">2 tbsp butter</label>
+          <input type="checkbox" name="nuts"/>
+          <label for="nuts">1 cup honey roasted pecans, roughly chopped</label>
+        </div>
+      </form>
+      <div class="author-block">
+        <img src="imgs/van-pic.png"/>
+        <div>
+          <h5>Vanessa Stevenson</h5>
+          <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
+        </div>
+        <button>SHARE RECIPE</button>
+      </div>
+    </main>
+    <footer>
+      <img src="imgs/small-logo.png"/>
+      <h6>Delicious &#169 2013 &#183 All Rights Reserved.</h6>
+      <h6>Proudly published with Ghost.</h6>
+    </footer>
     <script src="js/app.js"></script>
   </body>
 </html>
