--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   </head>
   <body>
     <header>
-      <img src="imgs/logo.png"/>
+      <div>
+        <img src="imgs/logo.png"/>
+      </div>
       <div>
         <h1><span class="cursive">Delicious</span></h1>
-        <h6>THE BEST FOOD BLOG ON THE WEB.</h6>
+        <p>THE BEST FOOD BLOG ON THE WEB.</p>
       </div>
       <div class="social-media">
         <img src="imgs/fb-icon.png">
@@ -26,13 +28,13 @@
     </header>
     <main>
       <heading>
-        <div>
-          <h1>Chocolate-pizza</h1>
-          <h6>POSTED ON 15 DEC 2013 / DESERTS</h6>
+        <div class="heading-div">
+          <h1>Chocolate Pizza</h1>
+          <p>POSTED ON 15 DEC 2013 / DESERTS</p>
         </div>
         <span class="print">
           <img src="imgs/print-icon.png"/>
-          <h6>Print</h6>
+          <p>PRINT</p>
         </span>
       </heading>
       <img class="big-pic" src="imgs/choco-pizza.png"/>
@@ -41,38 +43,62 @@
       <p>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jame mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
 
       <form>
-        <div>
-          <input type="checkbox" name="milk"/>
-          <label for="milk">1 1/2 cups milk</label>
-          <input type="checkbox" name="mascarpone"/>
-          <label for="mascarpone">1/2 cup mascarpone</label>
-          <input type="checkbox" name="salt"/>
-          <label for="salt">1/2 tsp pink salt</label>
-          <input type="checkbox" name="figs"/>
-          <label for="figs">1 lb Black Mission Figs</label>
-          <input type="checkbox" name="b-sugar"/>
-          <label for="b-sugar">1/2 cup brown sugar</label>
-          <input type="checkbox" name="water"/>
-          <label for="water">2-4 tbsp water</label>
-        </div>
-        <div>
-          <input type="checkbox" name="cream"/>
-          <label for="cream">1 1/2 cups heavy cream</label>
-          <input type="checkbox" name="g-sugar"/>
-          <label for="g-sugar">1/3 granulated sugar</label>
-          <input type="checkbox" name="eggs"/>
-          <label for="eggs">2 egg yolks</label>
-          <input type="checkbox" name="lemon"/>
-          <label for="lemon">1 lemon, juiced</label>
-          <input type="checkbox" name="butter"/>
-          <label for="butter">2 tbsp butter</label>
-          <input type="checkbox" name="nuts"/>
-          <label for="nuts">1 cup honey roasted pecans, roughly chopped</label>
-        </div>
+        <ul>
+          <li>
+            <input type="checkbox" name="milk"/>
+            <label for="milk">1 1/2 cups milk</label>
+          </li>
+          <li>
+            <input type="checkbox" name="mascarpone"/>
+            <label for="mascarpone">1/2 cup mascarpone</label>
+          </li>
+          <li>
+            <input type="checkbox" name="salt"/>
+            <label for="salt">1/2 tsp pink salt</label>
+          </li>
+          <li>
+            <input type="checkbox" name="figs"/>
+            <label for="figs">1 lb Black Mission Figs</label>
+          </li>
+          <li>
+            <input type="checkbox" name="b-sugar"/>
+            <label for="b-sugar">1/2 cup brown sugar</label>
+          </li>
+          <li>
+            <input type="checkbox" name="water"/>
+            <label for="water">2-4 tbsp water</label>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <input type="checkbox" name="cream"/>
+            <label for="cream">1 1/2 cups heavy cream</label>
+          </li>
+          <li>
+            <input type="checkbox" name="g-sugar" checked/>
+            <label class="strikethrough" for="g-sugar">1/3 granulated sugar</label>
+          </li>
+          <li>
+            <input type="checkbox" name="eggs" checked/>
+            <label class="strikethrough" for="eggs">2 egg yolks</label>
+          </li>
+          <li>
+            <input type="checkbox" name="lemon"/>
+            <label for="lemon">1 lemon, juiced</label>
+          </li>
+          <li>
+            <input type="checkbox" name="butter"/>
+            <label for="butter">2 tbsp butter</label>
+          </li>
+          <li>
+            <input type="checkbox" name="nuts"/>
+            <label for="nuts">1 cup honey roasted pecans, roughly chopped</label>
+          </li>
+        </ul>
       </form>
       <div class="author-block">
         <img src="imgs/van-pic.png"/>
-        <div>
+        <div class="author-details">
           <h5>Vanessa Stevenson</h5>
           <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
         </div>
@@ -80,9 +106,9 @@
       </div>
     </main>
     <footer>
-      <img src="imgs/small-logo.png"/>
-      <h6>Delicious &#169 2013 &#183 All Rights Reserved.</h6>
-      <h6>Proudly published with Ghost.</h6>
+      <img class="small-logo" src="imgs/small-logo.png"/>
+      <p>Delicious &#169 2013 &#183 All Rights Reserved.<p>
+      <p>Proudly published with Ghost.<p>
     </footer>
     <script src="js/app.js"></script>
   </body>
